Update to Java 11. Fix color selection. Cleanup code.